Ajout de la documentation pour les routes 1 à 6
